post method somewhat working
