# sources/web/docs/swagger.json
@@ -23,61 +23,41 @@
                         "description": "An example resource"
                     }
                 }
-            },
-            "post": {
-                "tags": [
-                    "asset"
-                ],
-                "parameters": [
-                    {
-                        "name": "order",
-                        "in": "body",
-                        "schema": {
-                            "$ref": "#/definitions/order"
-                        }
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "TODO funktioniert noch nicht!"
-                    }
-                }
             }
         },
-        "/asset/{id}": {
+        "/asset/{assetid}": {
             "get": {
                 "tags": [
                     "asset"
                 ],
                 "parameters": [
                     {
-                        "$ref": "#/parameters/id"
+                        "$ref": "#/parameters/assetid"
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "An example resource",
-                        "schema": {
-                            "$ref": "#/definitions/order"
-                        }
+                        "description": "An example resource"
                     }
                 }
-            },
-            "put": {
+            }
+        },
+        "/asset/createAsset/{assetname}&{path}": {
+            "post": {
                 "tags": [
                     "asset"
                 ],
                 "parameters": [
                     {
-                        "$ref": "#/parameters/id"
+                        "$ref": "#/parameters/assetname"
+                    },
+                    {
+                        "$ref": "#/parameters/path"
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "TODO funktioniert noch nicht!",
-                        "schema": {
-                            "$ref": "#/definitions/order"
-                        }
+                        "description": "An example resource"
                     }
                 }
             }
@@ -87,12 +67,10 @@
         "Asset": {
             "properties": {
                 "assetid": {
-                    "description": "",
                     "type": "integer",
                     "format": "int32"
                 },
                 "assetname": {
-                    "description": "",
                     "type": "string"
                 }
             },
@@ -100,11 +78,21 @@
         }
     },
     "parameters": {
-        "id": {
-            "name": "id",
+        "assetid": {
+            "name": "assetid",
             "in": "path",
             "type": "integer",
-            "format": "int32"
+            "format": "int11"
+        },
+        "assetname": {
+            "name": "assetname",
+            "in": "path",
+            "type": "string"
+        },
+        "path": {
+            "name": "path",
+            "in": "path",
+            "type": "string"
         }
     },
     "tags": [
